apps/70-tools/changedetection/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "tools-redirect-to-https@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ChangeDetection"
    gethomepage.dev/icon: "changedetection.png"
    gethomepage.dev/group: "Tools"
spec:
  ingressClassName: traefik
  rules:
    - host: "changedetection.test.truxonline.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 5000
  tls:
    - hosts:
        - "changedetection.test.truxonline.com"
      secretName: changedetection-tls
